# gift-autobuyer

./: .dockerignore  .env-dist  .gitignore  Dockerfile  README.md  autorun.bash  docker-compose.yml  main.py  pyproject.toml  run.bash
app/: exceptions.py  settings.py
app/autobuyer/: __init__.py  auth.py  autobuy.py  balance_provider.py  exceptions.py  gift_allocator.py  gift_provider.py  notifier.py
app/autobuyer/autobuyer/: __init__.py  default.py
app/autobuyer/balance_provider/: __init__.py  fake.py  telethon.py
app/autobuyer/core/: autobuyer.py  gift_allocator.py  gift_provider.py  notifier.py
app/autobuyer/gift_allocator/: __init__.py  default.py
app/autobuyer/gift_provider/: __init__.py  fake.py  telethon.py
app/autobuyer/notifier/: __init__.py  telegram.py
app/bot/: __init__.py  events.py  middlewares.py  misc.py  states.py
app/bot/routers/: __init__.py
app/bot/routers/dialogs/: __init__.py  create_filters.py  delete_filters.py  edit_filters.py  filters_menu.py  main_menu.py  receiver_menu.py  (+1 more)
app/core/autobuyer/: autobuyer.py  balance_provider.py
app/core/models/: __init__.py  allocation.py  gift.py  gift_filter.py  receiver.py
app/database/: __init__.py
app/database/models/: __init__.py  filter.py  receiver.py
app/database/repositories/: __init__.py  gift_filter.py  receiver.py
app/di/: container.py
app/models/: __init__.py  allocation.py  gift.py  gift_filter.py
app/utils/: __init__.py  ai.py  filters.py  formatters.py  telethon.py
scripts/: autorun.bash  install.bash  run.bash  run.bat  stop.bash  uninstall.bash
(+10 files in other folders)
