[tool.poetry]
name = "gift-autobuyer"
version = "0.1.0"
description = ""
authors = ["kirillketrik <kirillketrik34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.40.0"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
